--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1975,6 +1975,13 @@ astute HEADING NAV AREA CSS
 
 .default-logo {
   width: 150px;
+  transform:scale(1);
+  transition:transform 0.5s linear;
+}
+.smaller-logo {
+  width: 75px;
+  transform:scale(0.85);
+  transition:transform 0.5s linear;
 }
 
 .brand {
@@ -1990,10 +1997,6 @@ astute HEADING NAV AREA CSS
   color: white;
   font-size: 25px;
   font-weight: 600;
-}
-
-.smaller-logo {
-  width: 75px;
 }
 
 .logo-left {} .logo-right .logo {
