--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -286,6 +286,11 @@ astute HEADING TOP AREA CSS
   font-weight: 400;
 }
 
+.countdown-col-element span {
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+
 .colon {
   color: white;
   font-size: 60px;
@@ -4791,7 +4796,7 @@ astute TESTIMONIAL AREA CSS
     color: #fff;
 }
 .em-slider-descript {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
     margin-bottom: 25px;
     width: 100%;
@@ -4819,7 +4824,6 @@ astute TESTIMONIAL AREA CSS
     display: inline-block;
     font-size: 14px;
     font-weight: 500;
-    margin: 0 15px 0 0;
 	  padding: 10px 36px;
     position: relative;
     text-transform: uppercase;
@@ -7150,6 +7154,12 @@ table#wp-calendar td#today{
   }
   .minutes-title {
     padding-top: 20px !important;
+  }
+  .counter_bnt {
+    margin-right: 7px !important;
+  }
+  .counter_bnt a {
+    font-size: 12px;
   }
 }
 
