--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -246,6 +246,15 @@ span[id^="article"] {
 .files:not(:last-child) {
   padding-bottom: 15px;
 }
+
+.poster-container {
+  padding: 50px 10px 50px 10px;
+}
+
+.poster {
+  box-shadow: 0px 10px 40px 0px rgba(148, 146, 245, .3);
+}
+
 /*=====================
 astute HEADING TOP AREA CSS
 =========================*/
@@ -255,7 +264,7 @@ astute HEADING TOP AREA CSS
 /* count down area css */
 
 .countdown {
-  margin: 20px auto;
+  margin: 15px auto;
 }
 #meeting-timer .countdown {
   margin: 0 auto;
@@ -266,9 +275,11 @@ astute HEADING TOP AREA CSS
   display: inline-block;
   background-color: rgb(181,29,41,0.7);
   margin: 25px;
-  padding: 30px 20px 0 20px;
+  padding: 35px 20px 0 20px;
   width: 175px;
   height: 175px;
+  border-radius: 50%;
+	box-shadow: 0px 10px 20px 0px rgba(148,146,245,0.2);
 }
 #meeting-timer .countdown-col {
   margin: 10px;
@@ -437,7 +448,7 @@ position: absolute;
 .single_service_content1 h2{
     font-size: 18px;
     font-weight: 600;
-    color: #333;
+    color: #B51D29;
     margin-top: 0;
     margin-bottom: 10px;
 }
@@ -486,19 +497,18 @@ position: absolute;
 .service_icon {}
 .service_icon i{
  color:#333;
- background:fff;
+ background: #fff;
 }
 .service_icon span i{
-    width: 68px;
-    display: inline-block;
-    height: 68px;
-    line-height: 68px;
-    box-shadow: 0px 0px 30px 0px rgba(148,146,245,0.2);
-    text-align: center;
-    font-size: 25px;
-    border-radius: 50%;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
+  width: 68px;
+  display: inline-block;
+  height: 68px;
+  line-height: 68px;
+  text-align: center;
+  font-size: 25px;
+  border-radius: 50%;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .single_service1:hover .service_icon i{
@@ -517,7 +527,7 @@ position: absolute;
 }
 
 .single_service_inner{
-    margin-bottom: 58px;
+    margin-bottom: 60px;
     margin-top: 15px;
 
 }
@@ -527,7 +537,7 @@ position: absolute;
 }
 .single_service_content h2{
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 700;
     color: #333;
     margin-top: 0;
     margin-bottom: 10px;
@@ -550,12 +560,13 @@ position: absolute;
     display: inline-block;
     height: 68px;
     line-height: 68px;
-    box-shadow: 0px 0px 30px 0px rgba(148,146,245,0.2);
     text-align: center;
     font-size: 25px;
     border-radius: 50%;
     -webkit-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
+    background-color: white;
+	  box-shadow: 0px 10px 20px 0px rgba(148,146,245,0.2);
 }
 
 /* portfolio area */
@@ -2208,6 +2219,11 @@ a.red-on-white:hover {
 .redX {
     color: #B51D29;
 }
+
+.blue {
+    color: #007bff;
+}
+
 /* logo sticky */
 
 .astute-main-menu .logo a.main_sticky_main_l {
@@ -3405,8 +3421,7 @@ astute ABOUT SECTION
 	background: #fff;
 	transition: all 0.5s ease 0s;
 	position: relative;
-	box-shadow: 0px 10px 40px 0px rgba(148,146,245,0.2);
-	/* box-shadow: 0px 10px 40px 0px rgba(235,27,43,0.2); */
+	box-shadow: 0px 10px 20px 0px rgba(148,146,245,0.2);
 }
 .souvenir-box {
   box-shadow: 0px 10px 40px 0px rgba(148,146,245,0.2);
@@ -3724,7 +3739,7 @@ EM40 TEAM CSS
 /* team content */
 .em-content-title h2 {
   font-size: 0.9em;
-  font-weight: 500;
+  font-weight: 700;
   margin-bottom: 0;
   text-transform: uppercase;
   transition:.5s;
@@ -6199,7 +6214,24 @@ astute event AREA CSS
     width: 330px;
     height: 460px;
 }
-.souvenir-thumb img {
+.poster-thumb {
+    width: 330px;
+    height: 100%;
+    position: relative;
+}
+.posterView {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: rgb(255, 255, 255, 0.8);
+    padding: 5px 10px;
+    border-radius: 50%;
+    display: none;
+}
+.poster-thumb:hover .posterView {
+    display: block;
+}
+.souvenir-thumb img, .poster-thumb img {
   filter: grayscale(0);
 }
 .church-image {
@@ -6314,8 +6346,8 @@ h2.related-projects-title.text-left {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 .astute-single-event_adn:hover .astute-event-thumb_adn img {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
     transition: 0.5s !important;
     -webkit-transition: .5s !important;
 }
@@ -6878,6 +6910,10 @@ table#wp-calendar td#today{
     width: 80%;
     margin-top: 0;
   }
+  .poster-thumb {
+    width: 100%;
+    height: 100%;
+  }
   .carousel-image {
     height: 50vh;
   }
@@ -6993,6 +7029,9 @@ table#wp-calendar td#today{
 @media (min-width: 700px) and (max-width: 1000px) {
   .banner-text {
     padding: 160px 0;
+  }
+  .eventContainer {
+    padding-left: 20px;
   }
 }
 
