--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -713,9 +713,46 @@ position: absolute;
     opacity:1;
 }
 
+/* Youtube video section */
 
+.video-wrapper {
+  float: none;
+  clear: both;
+  width: 100%;
+  position: relative;
+  margin-top: 25px;
+  height: 0;
+}
+@media (min-width: 500px) {
+  .video-wrapper {
+    padding-bottom: 450px;
+  }
+}
+@media (max-width: 500px) {
+  .video-wrapper {
+    padding-bottom: 56.25%;
+  }
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+.video-embed {
+  max-width: 600px;
+  max-height: 400px;
+  text-align: center;
+}
 
-
+.img-wrapper img {
+  margin-top: 25px;
+  width: 100%;
+  max-width: 600px;
+}
 
 
 /* team area css */
