Change color of date in calendar block

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -211,7 +211,7 @@ span[id^="article"] {
   top: 20px;
   left: 0;
   width: 100%;
-  color: black;
+  color: #b51d29;
   font-size: 50px;
   font-weight: bold;
   height: 75px;
